src/components/message-pane/styles.module.scss
/* ... */
.messageArea {
  position: sticky;
  z-index: 111111111;
  bottom: 0;
  display: flex;
  align-items: stretch;
  flex-direction: column;
  flex-shrink: 0;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;

  .button {
    width: 35px;
    height: 25px;
    padding: 7px;
    margin: 0;
    backdrop-filter: blur(34px);
  }

  .backToBottom {
    position: absolute;
    z-index: 11111;
    top: -10px;
    top: -60px;
    right: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    min-width: 50px;
    min-height: 50px;
    border: var(--back-to-bottom-border);

    border-radius: 8px;
    background: var(--back-to-bottom-bg);
    cursor: pointer;
    backdrop-filter: blur(34px);

    &:hover {
      background: var(--back-to-bottom-bg-hover);
    }

    .text {
      margin-left: 10px;
      color: var(--alert-color);
    }
  }

  .floatingItems {
    display: flex;
    flex-direction: column;
    gap: 3px;
  }

  .floating {
    z-index: 11111;
    padding: 3px;
    padding-right: 8px;
    padding-left: 8px;
    margin-right: 4px;
    margin-left: 4px;
    border: var(--message-float-border);
    border-radius: 6px;
    background: var(--message-float-bg);
    font-size: 14px;
    backdrop-filter: blur(34px);

    &:last-child {
      margin-bottom: 3px;
    }

    &.floatingSuggestion {
      z-index: 11111111;
      right: 60px;
      display: flex;
      flex-direction: column;
      padding: 5px;
      gap: 2px;

      .suggestionItem {
        height: 30px;
        padding-right: 5px;
        padding-left: 10px;
        gap: 5px;

        &.commandSuggestionItem {
          height: 40px;
          .suggestContent {
            display: flex;
            flex-direction: column;
            margin-left: 4px;
            gap: 2px;
          }
          .suggestHeader {
            display: flex;
            align-items: center;
            gap: 5px;
          }
          .suggestDescription {
            font-size: 12px;
            color: var(--suggest-fg-dim);
          }
        }
        .suggestIcon {
          margin-left: auto;
          --text-color: var(--suggest-fg-icon);
        }

        .suggestionInfo {
          margin-left: auto;
          font-size: 12px;
          color: var(--suggest-fg-dim);
        }
        .suggestLabel {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
        .suggestArgs {
          font-size: 12px;
          color: var(--suggest-fg-dim);
        }
      }
    }

    &.floatingMessageEmojiPicker {
      position: absolute;
      z-index: 9999999;
      right: 0;
      bottom: 50px;
      left: 60px;
      left: initial;
      padding: 0;
      padding-bottom: 2px;
      margin-right: 6px;
      border: none;
      background-color: transparent;
      backdrop-filter: none;
    }
    &.replyIndicator {
      display: flex;
      flex-direction: column;
      padding-top: 6px;
      padding-right: 4px;
      padding-bottom: 2px;
      padding-left: 4px;
      .replyIndicatorHeader {
        display: flex;
        flex-direction: row;
        align-items: center;
        margin-bottom: 6px;
        margin-left: 2px;
        margin-right: 2px;
      }
      .replyIndicatorTitle {
        margin-right: auto;
      }
      .replyIndicatorInner {
        display: flex;
        align-items: center;
        padding-top: 4px;
        padding-right: 2px;
        padding-bottom: 4px;
        gap: 4px;
      }
      .message {
        display: -webkit-box;
        overflow: hidden;
        flex: 1;
        color: var(--reply-message-fg);
        font-size: 12px;
        -webkit-line-clamp: 1;
        -webkit-box-orient: vertical;
      }
    }
    &.editIndicator {
      display: flex;
      align-items: center;
      word-break: break-word;

      .message {
        display: -webkit-box;
        overflow: hidden;
        color: var(--reply-message-fg);
        font-size: 12px;
        -webkit-line-clamp: 1;
        -webkit-box-orient: vertical;
      }

      .editIcon {
        margin-right: 5px;
      }
    }

    &.floatingAttachment {
      display: flex;
      flex-direction: column;
      padding: 6px;
      gap: 2px;

      .attachmentContent {
        display: flex;
        align-items: center;
        height: 92px;
        margin-bottom: 2px;
        gap: 6px;
      }

      .attachmentInfo {
        overflow: hidden;
        padding-left: 2px;
        word-break: break-all;
      }
      .attachmentUploadToDropDown {
        margin-top: 6px;

        :global .box {
          padding: 6px;
        }
      }
    }

    .attachmentFilename {
      overflow: hidden;
      text-overflow: ellipsis;
      word-break: break-all;
      white-space: nowrap;
    }
    .attachmentSize {
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
      color: var(--text-color-secondary);
    }
    .attachmentEditImageButton {
      position: absolute;
      right: 4px;
      bottom: 4px;
    }
    .attachmentImageContainer {
      position: relative;
      display: flex;
      height: 100%;
    }
    .attachmentImage {
      flex-shrink: 0;
      height: 100%;
      border: var(--attachment-image-border);
      border-radius: 4px;
      background: var(--attachment-image-bg);
      cursor: pointer;
      object-fit: contain;
      aspect-ratio: 16/9;
    }
  }
}

body .advancedMarkupOptions {
  background-color: var(--text-area-advanced-bg);
}
/* ... */

